--- a/_config.yml
+++ b/_config.yml
@@ -9,24 +9,27 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Pedram Farghadani Chaharsooghi"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Pedram Farghadani Chaharsooghi"
-description              : &description "PhD Candidate in Operations Research | Concordia University"
-url                      : https://Pedram-Fdi.github.io
-baseurl                  : "" 
-repository               : "Pedram-Fdi/Pedram-Fdi.github.io"
+name                     : &name "Your Name"
+description              : &description "personal description"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
+repository               : "academicpages/academicpages.github.io"
 
-# Site Author
+# Site Author - The following control what appear as part of the author content on the side bar.
+#               If a field is blank the icon and link will not appear, otherwise it will be shown.
+#               Additional customization can be done by editing /_includes/author-profile.html
 author:
-  #avatar           : "profile.png"
-  name             : "Pedram Farghadani-chaharsooghi"
-  pronouns         : "he/him"
-  bio              : "PhD Candidate in Operations Research at Concordia University. Interested in disaster management, optimization, and machine learning."
-  location         : "Montreal, QC, Canada"
-  employer         : "Concordia University"
-  uri              : https://www.linkedin.com/in/pedram-farghadani-chaharsooghi/
-  email            : "pedram.farghadani-chaharsooghi@mail.concordia.ca"
+  # Biographic information
+  avatar           : "profile.png"
+  name             : "Your Sidebar Name"
+  pronouns         : # example: "she/her"  
+  bio              : "Short biography for the left-hand sidebar"
+  location         : "Earth"
+  employer         : "Red Brick University"
+  uri              : # URL
+  email            : "none@example.org" 
 
 
   # Academic websites
