--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Pedram Farghadani-Chaharsooghi"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+name                     : &name "Pedram Farghadani Chaharsooghi"
+description              : &description "PhD Candidate in Operations Research"
+url                      : https://PedramFdi.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "Pedram-Fdi/Pedram-Fdi.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "PEDRAAAAAAAAAAAAAM"
+  name             : "Pedram Farghadani-Chaharsooghi"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "PhD Candidate in Operations Research at Concordia University. Interested in disaster management, optimization, and machine learning."
+  location         : "Montreal, QC, Canada"
+  employer         : "Concordia University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "pedramfarghadani@gmail.com" 
 
 
   # Academic websites
