--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Pedram Farghadani-Chaharsooghi"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://pedram-fdi.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+name                     : &name "Pedram Farghadani-Chaharsooghi"
+description              : &description "PhD Candidate in Operations Research"
+url                      : https://pedram-fdi.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "pedram-fdi/pedram-fdi.github.io"
 
@@ -23,13 +23,13 @@ repository               : "pedram-fdi/pedram-fdi.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Pedram Farghadani"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Pedram Farghadani-Chaharsooghi"
+  pronouns         :
+  bio              : "PhD Candidate in Operations Research at Concordia University. Interested in disaster management, optimization, and machine learning."
+  location         : "Montreal, QC, Canada"
+  employer         : "Concordia University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "pedramfarghadani@gmail.com" 
 
 
   # Academic websites
