--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-6544-3801"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # URL
   researchgate     : "https://www.researchgate.net/profile/Pedram-Farghadani-Chaharsooghi?ev=hdr_xprf"
   scopus           : # URL
 
