--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/pedram-farghadani-chaharsooghi/" # Username
+  linkedin         : "pedram-farghadani-chaharsooghi" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
