--- a/_config.yml
+++ b/_config.yml
@@ -140,10 +140,13 @@ facebook:
 og_image                 :  # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
+
 social:
-  type                   : # Person or Organization (defaults to Person)
-  name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  type: "Person"
+  name: "Pedram Farghadani-Chaharsooghi"
+  links:
+    - "https://www.linkedin.com/in/pedram-farghadani-chaharsooghi"
+    - "https://github.com/pedram-fdi"
 
 
 # Analytics
