--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
     url: /portfolio/
         
   - title: "Awards"
-    url: /year-archive/
+    url: /awards/
     
   #- title: "CV"
   #  url: /cv/
