--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+  - title: "Professional Experience"
+    url: /ProfessionalExperience/ 
+    
   - title: "Publications"
     url: /publications/
 
