--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@
 main:
   - title: "Professional Experience"
     url: /professionalexperience/ 
+
+  - title: "education"
+    url: /education/
     
   - title: "Publications"
     url: /publications/
