--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
   - title: "Professional Experience"
     url: /professionalexperience/ 
 
-  - title: "education"
+  - title: "Education"
     url: /education/
     
   - title: "Publications"
