--- a/_config.yml
+++ b/_config.yml
@@ -36,10 +36,10 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.ca/citations?user=e4-JSzsAAAAJ&hl=en&oi=ao"
   impactstory      : # URL
-  orcid            : "https://orcid.org/0000-0002-6544-3801"
+  orcid            : #"https://orcid.org/0000-0002-6544-3801"
   semantic         : # URL
   pubmed           : # URL
-  researchgate     : "https://www.researchgate.net/profile/Pedram-Farghadani-Chaharsooghi?ev=hdr_xprf"
+  researchgate     : #"https://www.researchgate.net/profile/Pedram-Farghadani-Chaharsooghi?ev=hdr_xprf"
   scopus           : # URL
 
   # Repositories and software development
