--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "https://pedram-fdi.github.io/files/HeadShot.png"
   name             : "Pedram Farghadani-Chaharsooghi"
   pronouns         :
-  bio              : "PhD Candidate in Operations Research at Concordia University. Interested in disaster management, optimization, and machine learning."
+  bio              : "PhD Candidate in Operations Research"
   location         : "Montreal, QC, Canada"
   employer         : "Concordia University"
   uri              : # URL
